Split science into its own docker image and then build node from that

--- a/ubuntu/node/Dockerfile
+++ b/ubuntu/node/Dockerfile
@@ -1,141 +1,23 @@
-FROM usgs-espa/ubuntu-cots
+FROM usgs-espa/ubuntu-science
 MAINTAINER USGS LSRD http://eros.usgs.gov
 
-LABEL description="This is a build containing all of the software we use for \
-an ESPA processing node installed into the image."
+LABEL description="This is a build adding in the espa-processing software we \
+use for an ESPA processing node installed into the image."
 
 
-# ---------------------------------------------------------------------------
-# ---------------------------------------------------------------------------
-# ---------------------------------------------------------------------------
-# ---------------------------------------------------------------------------
-# ---------------------------------------------------------------------------
-# ---------------------------------------------------------------------------
-# This is broken, because it is not anywhere near working or complete
-# This is broken, because it is not anywhere near working or complete
-# This is broken, because it is not anywhere near working or complete
-# This is broken, because it is not anywhere near working or complete
-# This is broken, because it is not anywhere near working or complete
-# This is broken, because it is not anywhere near working or complete
-# This is broken, because it is not anywhere near working or complete
-# ---------------------------------------------------------------------------
-# ---------------------------------------------------------------------------
-# ---------------------------------------------------------------------------
-# ---------------------------------------------------------------------------
-# ---------------------------------------------------------------------------
-# ---------------------------------------------------------------------------
-
-
-# ----------------------------------------------------------------------------
-# Specify the user that will run everything
-ENV THE_USER=espa
-
-
-# ----------------------------------------------------------------------------
-# Configuration of many of the environment variables to reduce intermediate
-# docker image generation.
-# ----------------------------------------------------------------------------
-
-# ----------------------------------------------------------------------------
-# Define the installation and library locations
-ENV PREFIX=/espa/runtime \
-    ESPAINC=/espa/runtime/include \
-    ESPALIB=/espa/runtime/lib \
-    ESPA_SCHEMA=/espa/runtime/espa-product-formatter/schema/espa_internal_metadata_v1_3.xsd
-
-# ----------------------------------------------------------------------------
-# Clone the software and then build and install it
-# ----------------------------------------------------------------------------
-RUN mkdir -p /espa/src
-
-RUN REPO_NAME=espa-product-formatter \
-    && REPO_TAG=remotes/origin/docker-development \
+RUN REPO_NAME=espa-processing \
+    && REPO_TAG=espa-2.10.0-release \
     && cd /espa/src \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
-    && git checkout ${REPO_TAG} \
-    && make BUILD_STATIC=yes \
-    && make install \
-    && cd .. \
-    && rm -rf ${REPO_NAME}
+    && git checkout ${REPO_TAG}
 
-RUN REPO_NAME=espa-spectral-indices \
-    && REPO_TAG=remotes/origin/docker-development \
-    && cd /espa/src \
-    && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
-    && cd ${REPO_NAME} \
-    && git checkout ${REPO_TAG} \
-    && make BUILD_STATIC=yes \
-    && make install \
-    && cd .. \
-    && rm -rf ${REPO_NAME}
-
-RUN REPO_NAME=espa-cloud-masking \
-    && REPO_TAG=dev_mar2016 \
-    && cd /espa/src \
-    && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
-    && cd ${REPO_NAME} \
-    && git checkout ${REPO_TAG} \
-    && make BUILD_STATIC=yes \
-    && make install \
-    && cd .. \
-    && rm -rf ${REPO_NAME}
-
-#RUN REPO_NAME=espa-surface-water-extent \
-#    && REPO_TAG=docker-development \
-#    && cd /espa/src \
-#    && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
-#    && cd ${REPO_NAME} \
-#    && git checkout ${REPO_TAG} \
-#    && make BUILD_STATIC=yes \
-#    && make install \
-#    && cd ../.. \
-#    && rm -rf ${REPO_NAME}
-
-#RUN REPO_NAME=espa-surface-reflectance \
-#    && REPO_TAG=docker-development \
-#    && cd /espa/src \
-#    && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
-#    && cd ${REPO_NAME} \
-#    && git checkout ${REPO_TAG} \
-#    && make BUILD_STATIC=yes \
-#    && make install \
-#    && cd .. \
-#    && rm -rf ${REPO_NAME}
-
-#RUN REPO_NAME=espa-land-surface-temperature \
-#    && REPO_TAG=dev_v0.0.1 \
-#    && cd /espa/src \
-#    && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
-#    && cd ${REPO_NAME} \
-#    && git checkout ${REPO_TAG} \
-#    && make BUILD_STATIC=yes \
-#    && make install \
-#    && cd .. \
-#    && rm -rf ${REPO_NAME}
-
-
-#RUN REPO_NAME=espa-burned-area \
-#    && REPO_TAG=docker-development \
-#    && cd /espa/src
-#
-#RUN REPO_NAME=espa-snow-covered-area \
-#    && REPO_TAG=docker-development \
-#    && cd /espa/src
-
-
-#RUN REPO_NAME=espa-processing \
-#    && REPO_TAG=espa-2.10.0-release \
-#    && cd /espa/src \
-#    && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
-#    && cd ${REPO_NAME} \
-#    && git checkout ${REPO_TAG}
-
-#RUN cd /espa/src/espa-processing
+RUN cd /espa/src/espa-processing
 
 # ----------------------------------------------------------------------------
 # Add an entrypoint so that we execute as a specific user
-COPY container-entrypoint.sh /entrypoint.sh
+ENV THE_USER=espa
+COPY node-entrypoint.sh /entrypoint.sh
 RUN chmod 755 /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
 
