--- a/ubuntu/python/Dockerfile
+++ b/ubuntu/python/Dockerfile
@@ -19,5 +19,6 @@ RUN pip install virtualenv
 RUN virtualenv /python-virtual
 
 RUN . /python-virtual/bin/activate \
+    && pip install --upgrade pip \
     && pip install pep8==1.6.2 pylint==1.4.4
 
