--- a/ubuntu/python/Dockerfile
+++ b/ubuntu/python/Dockerfile
@@ -1,14 +1,15 @@
 FROM usgs-espa/ubuntu-base
 MAINTAINER USGS LSRD http://eros.usgs.gov
 
-LABEL description="This is a build from our base system which includes \
-the default python along with some python tools"
+LABEL description="This is a build from our base system which includes the default python along with some python tools"
 
 # ----------------------------------------------
 # Install the core python
-RUN apt-get update && apt-get install -y --no-install-recommends \
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
         python \
         python-pip \
+    && apt-get install -y --no-install-recommends \
         python-dev \
     && rm -rf /var/lib/apt/lists/*
 
@@ -19,6 +20,4 @@ RUN pip install virtualenv
 RUN virtualenv /python-virtual
 
 RUN . /python-virtual/bin/activate \
-    && pip install --upgrade pip \
-    && pip install pep8==1.6.2 pylint==1.4.4
-
+    && pip install --upgrade pip pep8 pylint
